--- a/AnnuaireAgro/AnnuaireAgro.csproj
+++ b/AnnuaireAgro/AnnuaireAgro.csproj
@@ -25,4 +25,9 @@
     <Resource Include="img\logo.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
